WindGroup Dev/src/objects/Applicable_Charges__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Except for Commercial Tax, all other Taxes to be Active so that , Rental Schedules are created automatically.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_for_Fit_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicable for Fit-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Charge_Type__c</fullName>
        <inlineHelpText>Pls select Base Charge Type if the bill is based on other Charge Type. (eg. for GTO and A&amp;P, select Base Charge Type as Advance Rental).</inlineHelpText>
        <label>Base Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Base_Charge_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Value__c</fullName>
        <label>Base Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_included__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Checked the Charge Formula includes the Base which to be entered at the Leasing Screen.</description>
        <inlineHelpText>Is Checked the Charge Formula includes the Base which to be entered at the Leasing Screen.</inlineHelpText>
        <label>Base included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Days__c</fullName>
        <inlineHelpText>Please select &quot;31&quot; if you want to set the billing date at the end of the month.</inlineHelpText>
        <label>Billing Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Billing_Frequency__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Day</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <description>This is used to set Billing Date for Rent Schedules, ideally this field was to map with LC but is not. On LC we populate default value as &apos;monthly&apos;</description>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Terms__c</fullName>
        <inlineHelpText>Prorate (1st and last month)
Non-prorate (full month)</inlineHelpText>
        <label>Billing Terms</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Charge_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Billing_Terms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cap_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cap Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cap_Value__c</fullName>
        <label>Cap Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Amount_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charge Amount Input Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Description__c</fullName>
        <label>Charge Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Charge_Method__c</fullName>
        <label>Charge Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Charge_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Operator__c</fullName>
        <description>Sum : Amount + Caculated Field
Multiple : Amount x Parameter
Highest : Highest of either Amount or Calculated Field
Special Formula: Excecute Defined special Formula (e.g. aggregate GTO calculation for different products)
Lowest : Lowest of either Amount or Calculated Field</description>
        <inlineHelpText>Sum : Amount + Caculated Field
Multiple : Amount x Parameter
Highest : Highest of either Amount or Calculated Field
Special Formula: Excecute Defined special Formula (e.g. aggregate GTO calculation 
Lowest : Lowest of either Amount or Calculated Field</inlineHelpText>
        <label>Charge Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Highest</fullName>
                </value>
                <value>
                    <fullName>Lowest</fullName>
                </value>
                <value>
                    <fullName>Special Formula</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Rate_Description__c</fullName>
        <label>Charge Rate Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Rate_Input_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charge Rate Input Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Rate__c</fullName>
        <label>Charge Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Start_Day__c</fullName>
        <inlineHelpText>Select &quot;Charge Start Day&quot; if it&apos;s special billing terms. 
eg. Electric, Water, Gas,.. billing starts with 26 ~ 25 of the month.</inlineHelpText>
        <label>Charge Start Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Day</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Charge_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial_Tax_Apply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comm Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cumulative_for_each_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Cumulative we will calculate the Total at each Tier &amp; Summarize them</description>
        <inlineHelpText>If Cumulative we will calculate the Total at each Tier &amp; Summarize them.
Example 
If the Maximum Tier is Tier 2,
If Cumulative:
      Tier 1 Total + Tier 2 Total
If NOT Cumulative:
      Tier 2 Total
      Which</inlineHelpText>
        <label>Cumulative for each Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Month_Formula__c</fullName>
        <inlineHelpText>This is to set up billing date for rent schedule.
(eg. -1: 1 month before rent month; 0: same month as rent month; 1: 1 month after rent month)</inlineHelpText>
        <label>Due Month Formula</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Due_Month_Formula</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_GTO_Amount__c</fullName>
        <label>Expected GTO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Accounts_Code__c</fullName>
        <label>Finance Accounts Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Accounts_Desc__c</fullName>
        <label>Finance Accounts Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>This is used to update &apos;Billing Frequency&apos; API - Frequency__c on Lease Charge</description>
        <label>Rent Schedule Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GTO_Comparison__c</fullName>
        <description>new field created in June 2017
to manage new GTO process to be defined on Lease or Lease Unit</description>
        <label>GTO Comparison</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>At Lease Unit</fullName>
                </value>
                <value>
                    <fullName>At Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GTO_Percent__c</fullName>
        <label>GTO Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <label>Lease Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>LOI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiple_Rental_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Rental Schedule (only for MEPE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_of_Parameter__c</fullName>
        <label>Multiple of Parameter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Area</fullName>
                </value>
                <value>
                    <fullName>Meter Units</fullName>
                </value>
                <value>
                    <fullName>Monthly Base Rent</fullName>
                </value>
                <value>
                    <fullName>Monthly GTO</fullName>
                </value>
                <value>
                    <fullName>Phone Units (Local)</fullName>
                </value>
                <value>
                    <fullName>Phone Units (Trunk)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <formula>Property__r.Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Applicable Charges</relationshipLabel>
        <relationshipName>Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>6%</fullName>
                </value>
                <value>
                    <fullName>8%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>330</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_1_Rate__c</fullName>
        <inlineHelpText>Please update % in decimal value in this field
e.g. For 10 Percent, add decimal: 0.10
e.g. For 5 Percent, add decimal: 0.05</inlineHelpText>
        <label>Tier 1 Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_1_Upper_Limit__c</fullName>
        <label>Tier 1 Upper Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2_Rate__c</fullName>
        <label>Tier 2 Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2_Upper_Limit__c</fullName>
        <label>Tier 2 Upper Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_3_Rate__c</fullName>
        <label>Tier 3 Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_3_Upper_Limit__c</fullName>
        <label>Tier 3 Upper Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tiered_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Tier Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tiered_Lower_Limit__c</fullName>
        <label>Tier Lower Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Area</fullName>
                </value>
                <value>
                    <fullName>By Percent</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>GTO</fullName>
                </value>
                <value>
                    <fullName>GTO (Higher)</fullName>
                </value>
                <value>
                    <fullName>GTO (Sum)</fullName>
                </value>
                <value>
                    <fullName>Meter Units</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Applicable Charge</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Currency_Code__c</columns>
        <columns>Property__c</columns>
        <columns>Charge_Rate__c</columns>
        <columns>Charge_Rate_Description__c</columns>
        <columns>Charge_Operator__c</columns>
        <columns>Multiple_of_Parameter__c</columns>
        <columns>Billing_Days__c</columns>
        <columns>Billing_Frequency__c</columns>
        <columns>Frequency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Applicable_Charges__c.Monthly</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllJunction8</fullName>
        <columns>NAME</columns>
        <columns>Charge_Rate__c</columns>
        <columns>Charge_Type__c</columns>
        <columns>Billing_Days__c</columns>
        <columns>Billing_Terms__c</columns>
        <columns>Billing_Frequency__c</columns>
        <columns>Frequency__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Junction 8</value>
        </filters>
        <label>All Junction 8</label>
    </listViews>
    <listViews>
        <fullName>AllTrainingMall</fullName>
        <columns>NAME</columns>
        <columns>Charge_Rate__c</columns>
        <columns>Charge_Type__c</columns>
        <columns>Billing_Days__c</columns>
        <columns>Billing_Terms__c</columns>
        <columns>Billing_Frequency__c</columns>
        <columns>Frequency__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Active__c</columns>
        <columns>Charge_Start_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>contains</operation>
            <value>Training</value>
        </filters>
        <label>All Training Mall</label>
    </listViews>
    <listViews>
        <fullName>JunctionMawTinCharges</fullName>
        <columns>NAME</columns>
        <columns>Base_Charge_Type__c</columns>
        <columns>Due_Month_Formula__c</columns>
        <columns>Charge_Type__c</columns>
        <columns>Billing_Days__c</columns>
        <columns>Type__c</columns>
        <columns>Lease_Type__c</columns>
        <columns>Charge_Method__c</columns>
        <columns>Charge_Rate__c</columns>
        <columns>Applicable_for_Fit_out__c</columns>
        <columns>Tiered_Limit__c</columns>
        <columns>Billing_Terms__c</columns>
        <columns>Frequency__c</columns>
        <columns>Cumulative_for_each_Tier__c</columns>
        <columns>Commercial_Tax_Apply__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Short_Code__c</field>
            <operation>equals</operation>
            <value>JMT</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Applicable_Charges__c.Monthly</value>
        </filters>
        <label>Junction Maw Tin Charges</label>
    </listViews>
    <listViews>
        <fullName>Junction_City</fullName>
        <columns>Property__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Charge_Rate__c</columns>
        <columns>Charge_Method__c</columns>
        <columns>Billing_Terms__c</columns>
        <columns>Charge_Start_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>contains</operation>
            <value>Junction City</value>
        </filters>
        <label>Junction City</label>
    </listViews>
    <nameField>
        <label>Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicable Charges</pluralLabel>
    <recordTypes>
        <fullName>Monthly</fullName>
        <active>true</active>
        <label>Monthly</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rent</fullName>
        <active>true</active>
        <label>Rent</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cap_Applicable_and_Value</fullName>
        <active>true</active>
        <description>Please fine Cap Value since Cap is Applicable.</description>
        <errorConditionFormula>AND (  Cap_Applicable__c = TRUE,  ISBLANK(Cap_Value__c ))</errorConditionFormula>
        <errorDisplayField>Cap_Value__c</errorDisplayField>
        <errorMessage>Please fine Cap Value since Cap is Applicable.</errorMessage>
    </validationRules>
</CustomObject>